# kiwi-simple-metrics

./: .drone.yml  .flake8  Dockerfile  LICENSE  README.md  dummy-metric  min_fail_example.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
example/: dummy-metric
kiwi_simple_metrics/: main.py  metrics.py  settings.py
kiwi_simple_metrics/metrics/: __init__.py  _report.py  cpu.py  disk.py  external.py  memory.py
kiwi_simple_metrics/settings/: __init__.py  metric.py  misc.py
