[tool.poetry]
authors = ["Jörn-Michael Miehe <40151420+ldericher@users.noreply.github.com>"]
description = "A lightweight monitoring solution for kiwi-scp"
license = "MIT"
name = "kiwi-simple-metrics"
packages = [{include = "kiwi_simple_metrics"}]
readme = "README.md"
version = "0.1.5"

[tool.poetry.dependencies]
psutil = "^5.9.7"
pydantic-settings = "^2.1.0"
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
kiwi-simple-metrics = "kiwi_simple_metrics.main:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
